--- a/SDL_Plane_Game_Engine.vcxproj.filters
+++ b/SDL_Plane_Game_Engine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Background.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MovingSprite.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="System.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ImagePaths.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MovingSprite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
