Monvingsprite klar? Började på AnimatedSprite

--- a/SDL_Plane_Game_Engine.vcxproj
+++ b/SDL_Plane_Game_Engine.vcxproj
@@ -121,6 +121,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AnimatedSprite.cpp" />
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="Level.cpp" />
@@ -130,6 +131,7 @@
     <ClCompile Include="System.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AnimatedSprite.h" />
     <ClInclude Include="Background.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="ImagePaths.h" />
