--- a/SDL_Plane_Game_Engine.vcxproj.filters
+++ b/SDL_Plane_Game_Engine.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="AnimatedSprite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ControllableSprite.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="System.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AnimatedSprite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllableSprite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
